# crispy

./: .ai-reference  .gitignore  .npmrc  .vscodeignore  CLAUDE.md  LICENSE  README.md  THIRD-PARTY-LICENSES  architecture.md  find-multi-vendor-sessions-super.sh  node_modules  package-lock.json  package.json  projects-view-playground.html  tsconfig.json  vitest.config.mts
.github/: FUNDING.yml
scripts/: backfill.ts  check-claude-fixture.sh  check-ranking.ts  embed-robust.sh  ensure-sharp-stub.mjs  generate-gradient-icons.mjs  generate-sdk-constants.ts  package-vsix.mjs  recall-audit.ts  recall-embed-test.ts  recall-prompt-v2.md  recall-prompt-v3b.md  recall-prompt-v4.md  recall-prompt-v5.md  recall-run.ts  recall-search.ts  recall.ts  smoke-session-manager.ts  smoke.ts  test-search.ts
spike/: app-server-approval-spike.mjs  app-server-spike.mjs  trace-approval.jsonl  trace.jsonl
src/: extension.ts  flexlayout-react.d.ts
tauri/: .gitignore  README.md  package-lock.json  package.json
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json  localhost-ipc.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/nsis/: hooks.nsh
tauri/src-tauri/src/: lib.rs  main.rs  menu.rs
test/: activity-index.test.ts  activity-scanner.test.ts  adapter-registry.test.ts  async-iterable-queue.test.ts  block-registry.test.ts  channel-idle.test.ts  claude-agent-adapter.test.ts  claude-code-adapter.test.ts  claude-entry-adapter.test.ts  claude-history-serializer.test.ts  claude-pipeline.test.ts  claude-registration.test.ts  context-usage.test.ts  (+47 more)
(+510 files in other folders)
